This is a brief overview of user-visible changes in AdPlug.

Changes for version 1.6:
	- New format support:
		- MSC: AdLib MSCplay
	- Dual OPL2 and OPL3 support.
	- This version is not binary-compatible with older versions!
	  All linked applications need to be recompiled.
	- License change: Ken Silverman permitted to relicense his
	  emulator under the LGPL. The whole AdPlug distribution is
	  now LGPL'd.

Changes for version 1.5:
	- New format support:
		- XSM: eXtra Simple Music
		- DRO: DOSBox Raw OPL
		- LDS: LOUDNESS Sound System
	- Added support for .adlib files to IMF player.
	- Reverted fmopl OPL2 emulator to old LGPL'd version, so
	  AdPlug is now completely free (LGPL) again. Please read the
	  README file for details.
	- Added Ken Silverman's YM3812 emulator again. The portability
	  issues have been fixed.
	- Added a test-suite.

Changes for version 1.4:
	- Documentation changed into Texinfo format.
	- New, modularized file loading framework.
	- Now using 'libbinio' for platform-independant binary I/O.
	- Added database framework for storing music file information.
	- Uses newest fmopl OPL2 emulator version 0.60 from MAME 0.66.

Changes for version 1.3:
	- Completely new build system for DOS and Windows.
	- Centralized debug management.
	- Added a whole bunch of new developer documentation.
	- Developer documentation is now using troff formatting language.
	- Much more flexible Protracker player.
	- New or corrected IMF timer rates for the following games:
		- Duke Nukem 2
	- New format support:
		- SNG: Adlib Tracker 1.0
		- CFF: BoomTracker 4.0
		- DTM: Defy Adlib Tracker
		- DMO: Twin TrackPlayer

Changes for version 1.2:
	- Added a whole bunch of new players:
		- SAT, ROL, SNG, XAD, XMS, MAD
	- SA2 player now handles version 7 files.
	- GCC 3.x compatibility.
	- Compiles on FreeBSD (and maybe many more flavors).
	- Now using GNU autotools for UNIX builds.
	- New OPL disk writer that creates RdosPlay RAW files.